# diesel-selectable-macro

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
src/: lib.rs
