[package]
name = "diesel-selectable-macro"
version = "0.3.0"
edition = "2021"
authors = [ "Luke Sneeringer <luke@sneeringer.com>" ]
description = "A derivable `Serialize` macro that selects precise fields."
readme = "README.md"
repository = "https://github.com/lukesneeringer/diesel-serialize-macro"
license = "MIT"
keywords = ["diesel", "select"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
darling = "0.14"
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = [ "full" ] }

[lib]
proc-macro = true
